# HeritageMapStudio

./: CMakeLists.txt  CMakePresets.json  README.md  index.html  package.json
demo-app/: index.html  package.json
demo-app/src/: main.js
docs/: phase1-notes.md
resources/sample-data/: taipei_heritage_geo_sample.csv  taipei_heritage_import_sample.csv
resources/styles/: dark.qss
src/: main.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h  MigrationManager.cpp  MigrationManager.h
src/models/: HeritageSite.cpp  HeritageSite.h  MapLayerState.cpp  MapLayerState.h  SearchFilterState.cpp  SearchFilterState.h  TimelineFilterState.cpp  TimelineFilterState.h
src/opengl/: MapCanvas.cpp  MapCanvas.h
src/repositories/: HeritageSiteRepository.cpp  HeritageSiteRepository.h
src/services/: CsvReader.cpp  CsvReader.h  ImportService.cpp  ImportService.h
src/ui/: ImportCsvDialog.cpp  ImportCsvDialog.h  LayerPanel.cpp  LayerPanel.h  MainWindow.cpp  MainWindow.h  MetadataEditorPanel.cpp  MetadataEditorPanel.h  SearchPanel.cpp  SearchPanel.h  TimelinePanel.cpp  TimelinePanel.h
src/utils/: GeoCoordinateTransformer.cpp  GeoCoordinateTransformer.h
